memo/memo-with-references/tests/fail-not-fn.stderr
error: expected fn item
 --> tests/fail-not-fn.rs:4:1
  |
4 | enum Huh {}
  | ^^^^^^^^^^^
