memo/memo-with-references/tests/fail-not-fn.rs
use memo_with_references::memo;

#[memo('a)]
enum Huh {}

fn main() {}
